SG-243 Fix spacing around phone link

--- a/web/themes/custom/sfgovpl/src/sass/_views.scss
+++ b/web/themes/custom/sfgovpl/src/sass/_views.scss
@@ -37,9 +37,11 @@
       color: $color-gray-dark;
       font-weight: bold;
     }
-    .__owner,
-    .__tel {
+    .__owner {
       margin-bottom: 10px;
+    }
+    .__tel {
+      margin-bottom: 0px;
     }
   }
 }
